Add git ignore update TODO

--- a/stats/TODO.txt
+++ b/stats/TODO.txt
@@ -1,4 +1,6 @@
-edit/remove
+edit/remove players, games
 sanctioned/non-sanctioned
+"Ranking" table
+update rating algo
 player search
 talk to zack about interface
