Big commit, finish front end, really should have committed more on the way

--- a/stats/TODO.txt
+++ b/stats/TODO.txt
@@ -1,6 +1,9 @@
+comment system
+icons
 edit/remove players, games
 sanctioned/non-sanctioned
 "Ranking" table
 update rating algo
 player search
 talk to zack about interface
+move "add players" to add game page
